[frontend/layout]: fixed need to scroll to login on mobile, set default tab to Exchange

--- a/apps/frontend/pages/_app.css
+++ b/apps/frontend/pages/_app.css
@@ -1,6 +1,7 @@
 html, body, #__next {
     padding: 0;
     margin: 0;
+    height: 100%;
 }
 
 .bn-onboard-modal {
